# claude-memory-compiler

./: .gitignore  AGENTS.md  pyproject.toml
hooks/: session-end.py
schema/: README.md
scripts/: config.py  flush.py  handoff-orchestrator.py  mem0_bridge.py  mem0_bridge_test.py  mem0_hooks.py  mem0_phase_c.py  rsync-agentkb-to-nas.sh  rsync-exclude.list  rsync-invoke.ps1  skill_stats.py
